Refactor change job name
Signed-off-by: Vitah Lin <vitahlin@gmail.com>

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -3,7 +3,7 @@ name: "Codecov"
 on: [push, pull_request]
 
 jobs:
-  test-ubuntu-latest:
+  code-coverage:
     runs-on: ubuntu-latest
         - name: Checkout repository
     steps:
