Chore coverage target
Signed-off-by: Vitah Lin <vitahlin@gmail.com>

--- a/codecov.yml
+++ b/codecov.yml
@@ -5,3 +5,10 @@ coverage:
         target: auto  # auto compares coverage to the previous base commit
 comment:
   require_changes: true
+
+coverage:
+  status:
+    project:
+      default:
+        target: 60%
+        threshold: 1%
