--- a/codecov.yml
+++ b/codecov.yml
@@ -12,5 +12,8 @@ coverage:
         threshold: 1%
 
 comment:
+  require_head: false     # default true
+  require_base: false
   layout: "header, files, footer" # remove "new" from "header" and "footer"
   hide_project_coverage: false # set to false
+  behavior: new
