--- a/codecov.yml
+++ b/codecov.yml
@@ -19,6 +19,6 @@ coverage:
 comment:
   require_head: false     # default true
   require_base: false
-  layout: "header, condensed_header, diff, condensed_diff, files,condensed_files, footer, condensed_footer" # remove "new" from "header" and "footer"
+  layout: "header, diff, files, condensed_footer" # remove "new" from "header" and "footer"
   hide_project_coverage: false # set to false
   behavior: new
