--- a/codecov.yml
+++ b/codecov.yml
@@ -17,10 +17,11 @@ coverage:
         informational: true
 
 comment:
+  require_changes: false
   require_head: false
   require_base: false
-  layout: "condensed_header, diff, files, condensed_footer" # remove "new" from "header" and "footer"
-  hide_project_coverage: false # set to false
+  layout: "condensed_header, diff, files"
+  hide_project_coverage: false
   behavior: default
 
 github_checks:
